[package]
name = "wkhtmltox-sys"
version = "0.1.2"
license = "MIT"
authors = ["Anthony Nowell <anowell@gmail.com>"]

description = "FFI bindings to wkhtmltox"
documentation = "http://anowell.github.io/wkthmltox-sys/wkhtmltox-sys/"
repository = "https://github.com/anowell/wkhtmltox-sys"
readme = "README.md"
keywords = ["wkhtmltox", "wkhtmltopdf", "wkhtmltoimage", "pdf", "html"]

[dependencies]
libloading = "0.7"

[dev-dependencies]
lazy_static = "1.4"
